# haskellWordle

./: .replit  haskell-dojo.cabal  sbox
src/: Sandbox.hs  main.hs
src/assets/: words5.txt
