cabal-version:      2.4
name:               haskell-dojo
version:            0.1.0.0
synopsis:           See README for more info
tested-with:        GHC==8.10.7

description:        
homepage:           https://github.com/iburzynskiatwood/haskelWordle
license:            MIT
license-file:       LICENSE
author:             
maintainer:         

category:           Example
extra-source-files:
    .hlint.yaml
    CHANGELOG.md
    README.md

executable haskell-dojo
    main-is: main.hs
    other-modules:
        
       Sandbox
    build-depends:
        base
      , containers
      , directory
      , random
      , ansi-terminal
    hs-source-dirs:
        app
      , src
    default-extensions:
        ImportQualifiedPost
      , InstanceSigs
    default-language: Haskell2010